...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dat-dC-yhH">
                    <rect key="frame" x="0.0" y="60" width="375" height="48"/>
                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O8Q-wh-Fge">
...
                    <rect key="frame" x="0.0" y="583" width="375" height="84"/>
                    <color key="backgroundColor" red="0.35528676247880231" green="0.60659354621409967" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="84" id="fz4-NU-1Wh"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                    <state key="normal" title="DONE">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="doneButtonAction" destination="-1" eventType="touchUpInside" id="ZDb-y5-l14"/>
                    </connections>
                </button>
...
